syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc_server";
option java_outer_classname = "HelloServiceProto";
/**
컴파일 시 HelloServiceGrpc, HelloRequest, HelloResponse 클래스 생성
 */
service HelloService{
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}